@@ -1,7 +1,7 @@
 #
 # Greylisting config file
 #
-# $Id: greylist.conf,v 1.13 2004/05/26 09:14:29 manu Exp $
+# $Id: greylist.conf,v 1.14 2004/05/26 21:50:13 manu Exp $
 #
 
 # If you work with multiple MX, list them with 
@@ -17,6 +17,10 @@ addr 127.0.0.0/8
 # as well, by filtering out your IP address blocks.
 # Here is an example if you use 192.0.2.0/16
 #addr 192.0.2.0/16
+
+# It is also possible de whitelist machines sender
+# machines using their DNS names.
+#domain example.net
 
 # You can avoid greylisting by filtering on the sender 
 # enveloppe address but this is not a good idea: it
